--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
     "jquery": "^2.1.4",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
-    "react-motion": "^0.3.1"
+    "react-motion": "^0.3.1",
+    "socket.io-client": "^1.3.7"
   }
 }
